// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea TextArea normal 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="false"
    className="textArea base enabled normal"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    readOnly={false}
    rows={3}
  />
</span>
`;

exports[`TextArea TextArea with disabled 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="false"
    className="textArea base disabled normal"
    disabled={true}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    readOnly={false}
    rows={3}
  />
</span>
`;

exports[`TextArea TextArea with error 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="true"
    className="textArea base enabled errored"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    readOnly={false}
    rows={3}
  />
  <div
    className="box marginTop2"
  >
    <div
      className="Text fontSize100 errorText alignStart breakWord fontWeightNormal"
    >
      <span
        className="formErrorMessage"
        id="test-error"
      >
        error message
      </span>
    </div>
  </div>
</span>
`;

exports[`TextArea TextArea with hasError 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="true"
    className="textArea base enabled errored"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    readOnly={false}
    rows={3}
  />
</span>
`;

exports[`TextArea TextArea with readOnly 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="false"
    className="textArea base enabled normal"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    readOnly={true}
    rows={3}
  />
</span>
`;

exports[`TextArea TextArea with rows 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="false"
    className="textArea base enabled normal"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    readOnly={false}
    rows={5}
  />
</span>
`;

exports[`TextArea TextField with maxLength character counter 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="false"
    className="textArea base enabled normal"
    disabled={false}
    id="test"
    maxLength={20}
    name="maxLength"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    readOnly={false}
    rows={3}
  />
  <div
    className="box marginTop2"
  >
    <div
      className="Flex rowGap4 columnGap4 xsDirectionRow"
    >
      <div
        className="FlexItem flexGrow"
      />
      <div
        className="FlexItem"
      >
        <div
          className="absolute box"
          style={
            Object {
              "visibility": "hidden",
            }
          }
        >
          <div
            className="Text fontSize100 subtleText alignStart breakWord fontWeightNormal"
          >
            20/20
          </div>
        </div>
        <div
          className="Flex rowGap1 columnGap1 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="box"
              style={
                Object {
                  "width": 16,
                }
              }
            />
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="Flex rowGap0 columnGap0 justifyEnd xsDirectionRow"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="Text fontSize100 subtleText alignEnd breakWord fontWeightNormal"
              >
                0/20
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`TextArea renders tags when supplied 1`] = `
<span>
  <div
    className="textArea base enabled normal textAreaWrapper"
    style={
      Object {
        "minHeight": 92,
      }
    }
  >
    <div
      className="box marginBottom1 marginEnd1"
    >
      <div
        aria-disabled={false}
        className="box rounding2 secondary xsDisplayInlineBlock"
        style={
          Object {
            "height": 32,
            "maxWidth": 300,
          }
        }
      >
        <div
          className="Flex rowGap0 columnGap0 itemsCenter xsDirectionRow"
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <div
            className="box marginEnd2 marginStart0"
          />
          <div
            className="truncate"
            title="a@pinterest.com"
          >
            <span
              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
            >
              a@pinterest.com
            </span>
          </div>
          <div
            className="box marginStart1"
          >
            <button
              className="button secondary hideOutline tapTransition accessibilityOutline"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={null}
                aria-label="Remove email tag"
                className="icon defaultIcon iconBlock"
                height={8}
                role="img"
                viewBox="0 0 24 24"
                width={8}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginBottom1 marginEnd1"
    >
      <div
        aria-disabled={false}
        className="box rounding2 secondary xsDisplayInlineBlock"
        style={
          Object {
            "height": 32,
            "maxWidth": 300,
          }
        }
      >
        <div
          className="Flex rowGap0 columnGap0 itemsCenter xsDirectionRow"
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <div
            className="box marginEnd2 marginStart0"
          />
          <div
            className="truncate"
            title="b@pinterest.com"
          >
            <span
              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
            >
              b@pinterest.com
            </span>
          </div>
          <div
            className="box marginStart1"
          >
            <button
              className="button secondary hideOutline tapTransition accessibilityOutline"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={null}
                aria-label="Remove email tag"
                className="icon defaultIcon iconBlock"
                height={8}
                role="img"
                viewBox="0 0 24 24"
                width={8}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginBottom1 marginEnd1"
    >
      <div
        aria-disabled={false}
        className="box rounding2 secondary xsDisplayInlineBlock"
        style={
          Object {
            "height": 32,
            "maxWidth": 300,
          }
        }
      >
        <div
          className="Flex rowGap0 columnGap0 itemsCenter xsDirectionRow"
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <div
            className="box marginEnd2 marginStart0"
          />
          <div
            className="truncate"
            title="c@pinterest.com"
          >
            <span
              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
            >
              c@pinterest.com
            </span>
          </div>
          <div
            className="box marginStart1"
          >
            <button
              className="button secondary hideOutline tapTransition accessibilityOutline"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={null}
                aria-label="Remove email tag"
                className="icon defaultIcon iconBlock"
                height={8}
                role="img"
                viewBox="0 0 24 24"
                width={8}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="box flexGrow overflowHidden relative"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        aria-hidden={true}
        className="textAreaSpacer"
      >
        -
      </div>
      <textarea
        aria-describedby={null}
        aria-invalid="false"
        className="unstyledTextArea"
        disabled={false}
        id="test"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={false}
      />
    </div>
  </div>
</span>
`;
